# static-reflection-demo

./: .clang-format  .gitignore  CMakeLists.txt
include/: ast.h  pool.h
include/ast/: ast_fwd.h  ast_nodes.inc  decl.h  expr.h  stmt.h  type.h
include/ast/api/: pretty_print.h  visitor.h
include/parsing/: lexer.h  parser.h
include/reflect/: access.h  model.h
include/serde/: decoder.h  deserialize.h  encoder.h  io.h  serialize.h
include/utility/: logging.h  save_restore.h
src/: CMakeLists.txt
src/ast/: expr.cc
src/serde/: serialize.h
test/: CMakeLists.txt  serialize_test.cpp
